--- a/src/css/botoes.css
+++ b/src/css/botoes.css
@@ -96,6 +96,52 @@ body {
 .botao-secreto.ativo{
     display: flex;
 }
+.botao-ultra-secreto{
+    display: none;
+    background-color: rgb(255, 60, 0);
+    border-radius: 20px;
+    font-size: 36px;
+    border: solid 2px rgba(48, 47, 46, 0.808);
+    margin-top: -60px;
+    margin-bottom: 40px;
+}
+.botao-ultra-secreto:hover{
+    transform: scale(1.2);
+}
+.botao-ultra-secreto.ativo{
+    display: flex;
+}
+.botao-super-secreto{
+    display: none;
+    background-color: rgb(255, 0, 0);
+    border-radius: 20px;
+    font-size: 30px;
+    border: solid 2px rgba(48, 47, 46, 0.808);
+    margin-top: -60px;
+    margin-bottom: 40px;
+}
+.botao-super-secreto:hover{
+    transform: scale(1.2);
+}
+.botao-super-secreto.ativo{
+    display: flex;
+}
+
+.botao-normal{
+    display: none;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    font-size: 40px;
+    border: solid 1px rgba(48, 47, 46, 0.808);
+    margin-top: -60px;
+    margin-bottom: 40px;
+}
+.botao-normal:hover{
+    transform: scale(1.2);
+}
+.botao-normal.ativo{
+    display: flex;
+}
 
 
 .pequeno:hover{
