--- a/src/css/botoes.css
+++ b/src/css/botoes.css
@@ -59,8 +59,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 35px;
     padding-top: 60px;
-    gap: 65px;
     max-height: calc(100vh - 12vh);
     max-width: 100vw;
 }
@@ -87,11 +87,11 @@ body {
     border-radius: 20px;
     font-size: 40px;
     border: solid 2px rgba(48, 47, 46, 0.808);
-    margin-top: -60px;
-    margin-bottom: 40px;
+    margin: 10px;
+    
 }
 .botao-secreto:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .botao-secreto.ativo{
     display: flex;
@@ -102,11 +102,10 @@ body {
     border-radius: 20px;
     font-size: 36px;
     border: solid 2px rgba(48, 47, 46, 0.808);
-    margin-top: -60px;
-    margin-bottom: 40px;
+    
 }
 .botao-ultra-secreto:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .botao-ultra-secreto.ativo{
     display: flex;
@@ -117,11 +116,10 @@ body {
     border-radius: 20px;
     font-size: 30px;
     border: solid 2px rgba(48, 47, 46, 0.808);
-    margin-top: -60px;
-    margin-bottom: 40px;
+ 
 }
 .botao-super-secreto:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .botao-super-secreto.ativo{
     display: flex;
@@ -133,11 +131,10 @@ body {
     border-radius: 20px;
     font-size: 40px;
     border: solid 1px rgba(48, 47, 46, 0.808);
-    margin-top: -60px;
-    margin-bottom: 40px;
+    
 }
 .botao-normal:hover{
-    transform: scale(1.2);
+    transform: scale(0.8);
 }
 .botao-normal.ativo{
     display: flex;
